spec/fixtures/errors/choose-with-no-children.jsx
var React = require('react');

module.exports = React.createClass({
  render: function () {
    return (
      <div>
        <Choose />
      </div>
    );
  }
});
